--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "latest",
     "bower": "latest",
     "compression": "latest",
+    "cors": "^2.7.1",
     "express": "latest",
     "express-session": "^1.13.0",
     "jwt-simple": "latest",
