--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "bootstrap": "latest",
     "angular": "latest",
     "angular-route": "latest",
-    "angular-local-storage": "^0.2.7"
+    "angular-local-storage": "^0.2.7",
+    "Chart.js": "^2.1.3"
   }
 }
