--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "latest",
     "bower": "latest",
+    "chart.js": "^2.1.3",
     "compression": "latest",
     "cors": "^2.7.1",
     "express": "latest",
