--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "postinstall": "./node_modules/bower/bin/bower install"
   },
   "dependencies": {
+    "adf.ly": "^1.1.0",
     "body-parser": "latest",
     "bower": "latest",
+    "cb": "^0.1.0",
     "chart.js": "^2.1.3",
     "compression": "latest",
     "cors": "^2.7.1",
@@ -24,7 +26,6 @@
     "passport": "latest",
     "passwoid": "^4.0.3",
     "request": "latest",
-    "short": "^2.6.0",
     "supertest": "latest"
   },
   "devDependencies": {
