--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "angular": "latest",
     "angular-route": "latest",
     "angular-local-storage": "^0.2.7",
-    "Chart.js": "^2.1.3"
+    "Chart.js": "^2.1.3",
+    "angular-sanitize": "^1.5.5"
   }
 }
