--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,8 @@
     "angular-route": "latest",
     "angular-local-storage": "^0.2.7",
     "Chart.js": "^2.1.3",
-    "angular-sanitize": "^1.5.5"
+    "angular-sanitize": "^1.5.5",
+    "eonasdan-bootstrap-datetimepicker": "^4.17.37",
+    "jQuery-Collapse": "^1.1.2"
   }
 }
