--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "express-session": "^1.13.0",
     "jwt-simple": "latest",
     "method-override": "latest",
-    "moment": "latest",
+    "moment": "^2.13.0",
     "mongoose": "latest",
     "oauth": "latest",
     "passport": "latest",
