--- a/bower.json
+++ b/bower.json
@@ -6,9 +6,10 @@
     "angular": "latest",
     "angular-route": "latest",
     "angular-local-storage": "^0.2.7",
-    "Chart.js": "^2.1.3",
+    "Chart.js": "^1.1.1",
     "angular-sanitize": "^1.5.5",
     "eonasdan-bootstrap-datetimepicker": "^4.17.37",
-    "jQuery-Collapse": "^1.1.2"
+    "jQuery-Collapse": "^1.1.2",
+    "angular-chart.js": "^0.10.2"
   }
 }
