--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "eonasdan-bootstrap-datetimepicker": "^4.17.37",
     "jQuery-Collapse": "^1.1.2",
     "angular-chart.js": "^0.10.2",
-    "angular-xeditable": "^0.1.12"
+    "angular-xeditable": "^0.1.12",
+    "angular-animate": "^1.5.5"
   },
   "resolutions": {
     "jquery": "~2.2.3"
